objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENG-100</fullName>
                </value>
                <value>
                    <fullName>ENG-200</fullName>
                </value>
                <value>
                    <fullName>ENG-300</fullName>
                </value>
                <value>
                    <fullName>ENG-400</fullName>
                </value>
                <value>
                    <fullName>ACT-100</fullName>
                </value>
                <value>
                    <fullName>ACT-200</fullName>
                </value>
                <value>
                    <fullName>ACT-300</fullName>
                </value>
                <value>
                    <fullName>ACT-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>C-100</fullName>
                </value>
                <value>
                    <fullName>C-200</fullName>
                </value>
                <value>
                    <fullName>C-300</fullName>
                </value>
                <value>
                    <fullName>C-400</fullName>
                </value>
                <value>
                    <fullName>S-100</fullName>
                </value>
                <value>
                    <fullName>S-200</fullName>
                </value>
                <value>
                    <fullName>S-300</fullName>
                </value>
                <value>
                    <fullName>S-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Position</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related position must be in the same department. You cannot relate a position to itself</errorMessage>
            <filterItems>
                <field>Position__c.Department__c</field>
                <operation>equals</operation>
                <valueField>$Source.Department__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Position__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Related Position</relationshipLabel>
        <relationshipName>Position</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <label>Salary Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50K-75K</fullName>
                </value>
                <value>
                    <fullName>75K-90K</fullName>
                </value>
                <value>
                    <fullName>90K-120K</fullName>
                </value>
                <value>
                    <fullName>120K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>